schema/testdata/validation_duplicate_implicit_inputs/schema.keel
model B {
    fields {
        name Text
    }

    actions {
        create create() with (name, name)
        list list(name, name)
        get get(id, id)
        update update(id, id) with (name, name)
        delete delete(id, id)
    }

    actions {
        create createFn() with (name, name)
        list listFn(name, name)
        get getFn(id, id)
        update updateFn(id, id) with (name, name)
        delete deleteFn(id, id)
        read readFn(name, name) returns (Any)
        write writeFn(name, name) returns (Any)
    }
}
